# ecot-prm

./: .gitignore  ppo_vllm_ray_fsdp_v3.py  pyproject.toml  run_libero_eval_vllm.py
envs/: ecot_reward_wrapper.py  libero_env.py  venv.py  wrappers.py
experiments/robot/: eval_ecot_rule.py  robot_utils.py
experiments/robot/libero/: generate_ecot_dataset.py  libero_utils.py  train_ecot_prm.py
models/: critic.py  ecot_prm.py  prm.py
ppo/envs/: base.py  libero_env.py
scripts/: eval_ecot_rule.sh  train_rl_vllm_ray_fsdp.sh
tests/: test_libero.py  test_ppo.py  test_ray.py  test_tf.py  test_torch.py
utils/: fsdp_utils.py  logging_utils.py  util.py  vllm_utils2.py
